# lcnix

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  bootstrap  bootstrap.1  bootstrap.sh  detect_lccc.cmake
.github/workflows/: linux.yml
bootstrap-cmake/: stage1.cmake  stage1_libc.cmake  stage2.cmake
include/: types.h
include/kernel/common/: macros.h
include/kernel/proc/: caps.inc  credentials.hpp
kernel/: CMakeLists.txt  dummy.cpp
kernel/arch/: CMakeLists.txt
kernel/arch/wc65c816/: loader.s
kernel/arch/x86_64/: CMakeLists.txt  bus.s  gdt.c  halt.s  idt.c  isrs.s  loader-64long.s  loader.s  memcpy.c  memcpy.s  syscall_init.s
kernel/arch/x86_64/hypervisor/: CMakeLists.txt  check_hypervisor.S
kernel/common/: CMakeLists.txt  Cargo.toml  allocator.h  build.txt  list.h  main.cpp
kernel/common/elf/: elf.h  loadelf.c
kernel/common/kernel-attributes/: Cargo.toml
kernel/common/kernel-attributes/src/: lib.rs
kernel/common/src/: alloc.rs  bus.rs  cap.rs  elf.rs  errno.rs  file.rs  hypervisor.rs  kpanic.rs  lib.rs  proc.rs  ptr.rs  sys.rs  syscall.rs
kernel/common/src/sys/: disp.rs  mod.rs
kernel/common/src/sys/except/arch/: mod.rs  x86_64.rs
kernel/common/src/sys/types/arch/: x86_64.rs
kernel/ld/: generic-lcnix-kernel.ld  x86_64-lcnix-kernel.ld
kernel/syscalls/: README  emap.md
libc/: CMakeLists.txt
libc/arch/x86_64/: CMakeLists.txt  exit.s  syscall.s
libc/arch/x86_64/ld/: CMakeLists.txt  dummy.c
libc/common/: CMakeLists.txt  __cxa_exit.c  exit.c  malloc.c
libc/crt/: CMakeLists.txt  crt0.c  crt1.c
libc/include/: stdint.h  stdlib.h  unistd.h
libc/ld/: CMakeLists.txt  ld-lcnix.c
libgcc/: CMakeLists.txt
libgcc/arch/x86_64/: CMakeLists.txt  unwind_deterministic.c
libgcc/common/: CMakeLists.txt  memcpy.c
libm/: CMakeLists.txt  __finite.c
libm/arch/x86_64/: CMakeLists.txt
libm/common/: CMakeLists.txt  __finite.c  __finitef.c
libm/include/: math.h
scripts/: as-root.sh
stage1/: CMakeLists.txt
