[package]
name = "common"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
name = "lcnix_kernel_common"

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
