[package]
name = "common"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
name = "lcnix_kernel_common"

[dependencies]
kernel-attributes = {path="./kernel-attributes"}
enumset = {path="../enumset/enumset"}
enumset_derive = { version = "0.5.0", path = "../enumset/enumset_derive" }
compiler_builtins = "0.1.32"


[features]
lc_hypervisor = []

[profile.dev]
panic = "abort"
lto = true
opt-level = 1

[profile.release]
panic = "abort"
lto = true
opt-level = 3
